objects/Claim.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims (Account)</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Claims</relationshipLabel>
        <relationshipName>HouseholdClaims</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Claims</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>ClaimReasonType</columns>
        <columns>Status</columns>
        <columns>ApprovedAmount</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Claims</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>